--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,6 @@
 /.vscode
+/.VSCodeCounter
 /build
 /debug
 /src/include/koopa.h
-run_hello.bat
-run_test.bat
-hello
-hello.koopa
-test.cpp
-test.exe
-TODO
+TODO.md
